package com.example.productmodule.app.gRPC;

import org.junit.jupiter.api.Test;

import static org.junit.jupiter.api.Assertions.*;

class ProductServiceGRPCTest {

    @Test
    void getById() {
    }

    @Test
    void getAllProduct() {
    }

    @Test
    void addProduct() {
    }

    @Test
    void addProductToBucket() {
    }

    @Test
    void removeProductFromBucket() {
    }

    @Test
    void getAllByParam() {
    }
}